--- a/src/main/resources/templates/index_new.html
+++ b/src/main/resources/templates/index_new.html
@@ -135,6 +135,36 @@
 						</div>
 					</div>
 					<br/>
+					<div class="demo-card-square mdl-card mdl-shadow--2dp" ng-controller="bank_account_controller">
+						<div class="mdl-card__title mdl-card--expand"
+							style="background: #F44336">
+							<h2 class="mdl-card__title-text" ng-bind-html="bank_account_tag"></h2>
+						</div>
+						<div class="mdl-card__actions mdl-card--border" ng-bind-html="bank_account_anchor_tag">
+						</div>
+						<div class="mdl-card__menu">
+							<button
+								class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect"
+								style="color: #FFF;">
+								<i class="material-icons">view_list</i>
+							</button>
+						</div>
+					</div>
+					<br/>
+					<div class="demo-card-square mdl-card mdl-shadow--2dp" ng-controller="withdraw_account_controller">
+						<div class="mdl-card__title mdl-card--expand">
+							<h2 class="mdl-card__title-text" ng-bind-html="withdraw_account_tag"></h2>
+						</div>
+						<div class="mdl-card__actions mdl-card--border" ng-bind-html="withdraw_account_anchor_tag">
+						</div>
+						<div class="mdl-card__menu">
+							<button
+								class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect"
+								style="color: #FFF;">
+								<i class="material-icons">view_list</i>
+							</button>
+						</div>
+					</div>
 					</div>
 				</div>
 			</div>
@@ -149,6 +179,9 @@
 		<script src="scripts/expenses_categories_controller.js"></script>
 		<script src="scripts/recent_expenses_controller.js"></script>
 		<script src="scripts/outstanding_expenses_controller.js"></script>
+		<script src="scripts/bank_account_controller.js"></script>
+		<script src="scripts/withdraw_account_controller.js"></script>
+		
 		</div>
 	</body>
 </html>
